--- a/apps/wedding/src/index.css
+++ b/apps/wedding/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: Display;
+  src: url("/fonts/Harmond-SemiBoldCondensed.otf") format("opentype");
+}
+@font-face {
+  font-family: Regular;
+  src: url("/fonts/Mukta-Regular.ttf") format("truetype");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  font-family: Regular, sans-serif;
+}
+
+h1 {
+  font-family: Display, sans-serif;
+}
+
+body {
+  background: #fffdf9;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
