--- a/apps/wedding/src/index.css
+++ b/apps/wedding/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@200;400&display=swap");
+
 @font-face {
   font-family: Sage;
   src: url("/fonts/Sage.otf") format("opentype");
@@ -21,6 +23,15 @@
 
 h1 {
   font-family: Velour, sans-serif;
+}
+
+h2 {
+  font-family: Harmond;
+}
+
+p {
+  font-family: Public Sans, sans-serif;
+  font-weight: 200;
 }
 
 body {
