--- a/apps/cause/src/index.css
+++ b/apps/cause/src/index.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 body {
-  background: #fffdf9;
+  background: #f4f4f4;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
