--- a/apps/wedding/src/components/AboutCard/index.module.scss
+++ b/apps/wedding/src/components/AboutCard/index.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   padding-bottom: 300px;
   width: 700px;
-  padding: 60px 60px;
+  max-width: 100%;
   height: 650px;
   overflow: hidden;
 
