--- a/apps/sf2022/src/index.css
+++ b/apps/sf2022/src/index.css
@@ -7,14 +7,14 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  background: rgb(230, 234, 235);
+  background: var(--sf-background-color);
 }
 
 body {
   font-family: "Krona One", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: rgb(0, 0, 0);
+  color: var(--sf-text-color);
 }
 
 .raleway {
@@ -25,12 +25,10 @@ body {
   font-family: "Krona One", sans-serif;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
 }
-/* Hide scrollbar for IE, Edge and Firefox */
 * {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+} */
